fix: fix index-page icon align

--- a/styles/index-notion.css
+++ b/styles/index-notion.css
@@ -6,7 +6,7 @@
 }
 
 .index-page .notion-page-icon-wrapper {
-  display: flex;
+  display: flex !important;
 }
 
 .index-page .notion-collection-card:hover {
